# carded

./: .bumpversion.cfg  .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  app.py  google_csv_builder.py  main.py  pyproject.toml  render.yaml  requirements.txt  session.py  vcard_builder.py
.claude/: settings.local.json
.cursor/: .cfs-categories.json  init.md
.cursor/bugs/: 1-DONE-extraction-errors-on-real-world-card-hallucinated-email-local-part-wrong-phone-digits-ocr-misread-of-title.md  1-extraction-errors-on-real-world-card-hallucinated-email-local-part-wrong-phone-digits-ocr-misread-of-title.md  2-DONE-render-is-not-picking-up-new-commits-for-this-project.md  2-render-is-not-picking-up-new-commits-for-this-project.md
.cursor/docs/: 1-interface-contract.md  2-phase-5-deployment-runbook.md
.cursor/features/: 1-custom-domain-carded-io-cutover.md
.cursor/progress/: 1-carded-mvp-plan.md  2-carded-mvp-plan-final.md  3-DONE-phase-1-complete-handoff.md  3-phase-1-complete-handoff.md  4-DONE-phase-2-and-3-complete-handoff.md  4-phase-2-and-3-complete-handoff.md  5-phase-4-and-ui-polish-handoff.md
.cursor/ui/: 1-CLOSED-make-the-ui-more-attractive-and-modern.md  1-make-the-ui-more-attractive-and-modern.md  2-DONE-reskin-the-application-using-graham-nessler-design-system.md  2-reskin-the-application-using-graham-nessler-design-system.md
baml_client/: async_client.py  inlinedbaml.py  parser.py  stream_types.py  sync_client.py  type_builder.py  type_map.py  types.py
baml_src/: business_card.baml  clients.baml
static/css/: style.css  tokens.css
static/js/: app.js  theme-init.js
templates/: base.html  index.html
tests/: fixtures_data.py  test_app.py  test_google_csv.py  test_integration.py  test_main.py  test_session.py  test_validation.py  test_vcard_builder.py
validation/: sanitizer.py
